Update email address

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="title">Contact:</div>
                 <div class="contact">
                     <a href="https://github.com/Farhan291">Github</a>
-                    <a href="mailto:farhan29110511@gmail.com">Email</a>
+                    <a href="mailto:hello@ifarhan.tech">Email</a>
                     <a
                         href="https://www.linkedin.com/in/mohammed-f-a153a4279?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">LinkedIn</a>
                 </div>
