--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <div class="contact">
                     <a href="https://github.com/Farhan291">Github</a>
                     <a href="mailto:hello@ifarhan.tech">Email</a>
-                    <a
-                        href="https://www.linkedin.com/in/mohammed-f-a153a4279?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/mohammed-farhann/">LinkedIn</a>
+                    <a href="./assets/Resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
                 </div>
             </div>
 
@@ -85,8 +85,6 @@
   updateTime();
     const images = [
         './assets/megumi.png',
-        "./assets/back1.jpg",
-        "./assets/back4.png",
         "./assets/back5.jpg",
         "./assets/back6.jpg"
     ];
